[JENKINS-43259] fix an issue where long descriptions would not wrap due to inherited whitespace style

--- a/blueocean-core-js/src/less/parameters-run-button.less
+++ b/blueocean-core-js/src/less/parameters-run-button.less
@@ -1,5 +1,6 @@
 .ParametersRunButton {
     .inputParameters {
         color: #4A4A4A;
+        white-space: normal;
     }
 }
